# tostao-test

./: RESUMEN_GENERAL_CASOS.md  main.py  pyproject.toml
notebooks/: caso_a_forecast.ipynb  caso_a_optimizer.ipynb  caso_b.ipynb  caso_c.ipynb
notebooks/caso_a_resultados/: README_OPTIMIZER.md  RESUMEN_OPTIMIZACION.md  ejemplo_simple_optimizer.py  resultados_plan_pedidos_optimizado.csv  resultados_recomendaciones_inventario.csv  resultados_resumen_por_tienda.csv
notebooks/caso_b_resultados/: README.md  RESUMEN_COMBOS.md  top_5_combos_por_cluster.csv
notebooks/caso_c_resultados/: README.md  RESUMEN_AOV.md
src/: data_source.py  demand.py  forecast.py  model_manager.py  optimizer.py  pipeline_manager.py
