[project]
name = "test-tostao"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "mlxtend>=0.24.0",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "prophet>=1.2.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "xgboost>=3.1.3",
]
